--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="dark" id="slide-5" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="dark segue" id="slide-5" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>學習，實作，觀察</h2>
