--- a/index.html
+++ b/index.html
@@ -520,8 +520,13 @@ View(Cl_info)
 
 <ol>
 <li>去除前後不相干的資料列</li>
-<li>轉換某些欄位的格式</li>
+<li>轉換某些欄位的格式
+
+<ul>
 <li>將單位轉換，從<strong>百萬元變成元</strong></li>
+<li>將不應該出現的,去除</li>
+</ul></li>
+<li>將需要的時間資料抽離出來</li>
 </ol>
 
 </div>
