--- a/index.html
+++ b/index.html
@@ -710,9 +710,11 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
 
 <slide class="quote" id="slide-38" style="background:red; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h1>接下來比較難，真的!!!!</h1>
+  </hgroup>
   <article data-timings="">
-    <p><q>接下來比較難，真的!!!!</q></p>
-
+    
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -1074,7 +1076,7 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=38 title=''>
+        data-slide=38 title='接下來比較難，真的!!!!'>
          38
       </a>
     </li>
